--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>sup</title>
+    <title>Stax</title>
     <link rel="stylesheet" href="dist/all.css">
     <script src="dist/thirdparty.js"></script>
     <script src="dist/all.js"></script>
