--- a/app/Objectives/objectiveList.html
+++ b/app/Objectives/objectiveList.html
@@ -1,1 +1,23 @@
-objectives
+<div ng-controller="objectiveListController">
+    <span class="main-objective">
+        <objective class="expanded">
+            <taskbar>
+                <task>get it done</task>
+                <task>and this too</task>
+            </taskbar>
+            Phaethon
+            <progressbar></progressbar>
+        </objective>
+    </span>
+    <span class="clear block">
+        <objective class="collapsed">
+            SD
+            <progressbar></progressbar>
+        </objective>
+        <objective class="collapsed">No</objective>
+        <objective class="collapsed">Pa</objective>
+        <objective class="collapsed">Pr</objective>
+        <objective class="collapsed">Bu</objective>
+        <objective class="collapsed ghost">+</objective>
+    </span>
+</div>
