--- a/app/Users/userInfo.html
+++ b/app/Users/userInfo.html
@@ -1,3 +1,3 @@
 <div ng-controller="UserInfoController">
-    sup, {{user.name}} <img width="80" ng-src="{{user.icon}}">
+    <img width="80" ng-src="{{user.icon}}">{{user.name}}
 </div>
