users working (still unnecessary save)

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body ng-app="stax">
 <div>
-    <div class="left" ng-include="'app/users/userList.html'"></div>
-    <div class="right" ng-include="'app/objectives/objectiveList.html'"></div>
+    <div class="left" ng-include="'app/Users/userList.html'"></div>
+    <div class="right" ng-include="'app/Objectives/objectiveList.html'"></div>
 </div>
 </body>
 </html>
