--- a/app/Users/userList.html
+++ b/app/Users/userList.html
@@ -1,3 +1,3 @@
 <div ng-controller="UserListController">
-    <user ng-repeat="(key, user) in users" ng-model="user"></user>
+    <user ng-repeat="(key, user) in users | orderBy" ng-model="user"></user>
 </div>
