--- a/app/Objectives/directives/objective/objectiveTemplate.html
+++ b/app/Objectives/directives/objective/objectiveTemplate.html
@@ -1,8 +1,11 @@
 <span>
     <taskbar>
-        <task ng-repeat="(key, task) in objective.tasks">{{task.name}}</task>
+        <task ng-repeat="task in objective.tasks">{{task.name}}</task>
     </taskbar>
-    <input ng-if="objective" type="text" ng-model="objective.name" />
+    <abbreviation ng-if="objective && collapsed">{{objective.abbreviation}}</abbreviation>
+    <name ng-if="objective && !collapsed" >
+        <input type="text" ng-blur="onUpdate()" ng-model="objective.name" />
+    </name>
     <ng-transclude ng-if="!objective"></ng-transclude>
     <progressbar progress="objective.progress"></progressbar>
 </span>
