--- a/app/Objectives/objectiveList.html
+++ b/app/Objectives/objectiveList.html
@@ -1,14 +1,14 @@
 <div ng-controller="objectiveListController">
     <objectives>
         <parent-objectives>
-            <objective ng-repeat="parentObjective in parentObjectives" ng-click="loadParentObjective(parentObjective.key)">{{parentObjective.objective.name}}</objective>
+            <objective mode="collapsed" ng-repeat="parentObjective in parentObjectives" ng-click="loadParentObjective(parentObjective.key)">{{parentObjective.objective.name}}</objective>
         </parent-objectives>
         <span class="main-objective">
-            <objective class="expanded" on-update="updateObjective()" ng-model="objective"></objective>
+            <objective mode="expanded" on-delete="deleteObjective()" on-update="updateObjective()" ng-model="objective"></objective>
         </span>
         <child-objectives>
-            <objective collapsed="true" ng-repeat="objective in objective.subObjectives" ng-model="objective" ng-click="loadChildObjective($index)"></objective>
-            <objective collapsed="true" class="ghost" add-field="side" on-add="addNewSubObjective(name)">
+            <objective mode="mini" ng-repeat="objective in objective.subObjectives" ng-model="objective" ng-click="loadChildObjective($index)"></objective>
+            <objective mode="mini" class="ghost" add-field="side" on-add="addNewSubObjective(name)">
                 +
             </objective>
         </child-objectives>
