sup and parent objective animation

--- a/app/global/directives/progressBar/progressBar.html
+++ b/app/global/directives/progressBar/progressBar.html
@@ -1,2 +1,2 @@
 <progress-background></progress-background>
-<progress-indicator ng-style="{width: progress || '0' + '%'}"></progress-indicator>
+<progress-indicator ng-style="{width: progress + '%'}"></progress-indicator>
