--- a/app/tasks/directives/task/task.html
+++ b/app/tasks/directives/task/task.html
@@ -1,4 +1,5 @@
-<span ng-click="toggleComplete(task)">
-    <check ng-model="task.completed"></check>
-    {{task.text}}
+<span>
+    <check ng-model="task.completed" ng-click="toggleComplete(task)"></check>
+    <span ng-click="selectTask(task)" ng-bind-html="task.text | html"></span>
+    <span ng-if="task.date"> by {{task.date | date:'M/d'}}</span>
 </span>
