--- a/app/global/directives/messageOverlay/messageOverlay.html
+++ b/app/global/directives/messageOverlay/messageOverlay.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<div>
+    <message>{{message}}</message>
+    <button ng-click="onOk()">Yes</button><button ng-click="onCancel()">No</button>
+</div>
