made workspaces user specific and selectable

--- a/app/global/directives/taskInfoPanel/taskInfoPanel.html
+++ b/app/global/directives/taskInfoPanel/taskInfoPanel.html
@@ -14,7 +14,7 @@
     <toolbar>
         <tool>
             <button ng-click="save()">save
-            </button><button ng-click="ngShow = false">cancel
+            </button><button ng-click="ngShow = false; deleteRequested = false">cancel
             </button><button ng-click="deleteRequested = true">delete</button>
         </tool>
     </toolbar>
