--- a/app/objectives/objectiveList.html
+++ b/app/objectives/objectiveList.html
@@ -4,13 +4,14 @@
             <objective mode="collapsed" ng-repeat="parentObjective in parentObjectives" ng-click="loadParentObjective(parentObjective.key)">{{parentObjective.objective.name}}</objective>
         </parent-objectives>
         <main-objective>
-            <objective mode="expanded" tasks="tasks" on-update="updateObjective()" on-delete="deleteObjective()" ng-model="objective"></objective>
-        </main-objective>
-        <child-objectives>
-            <objective mode="mini" ng-repeat="objective in objective.subObjectives" ng-model="objective" ng-click="loadChildObjective($index)"></objective>
-            <objective mode="mini" class="ghost" add-field="left" add-icon="true" on-add="addNewSubObjective(name)">
-                +
+            <objective mode="expanded" tasks="tasks" on-update="updateObjective()" on-delete="deleteObjective()" ng-model="objective">
+                <child-objectives>
+                    <objective mode="mini" ng-repeat="objective in objective.subObjectives" ng-model="objective" ng-click="loadChildObjective($index)"></objective>
+                    <objective mode="mini" class="ghost" add-field="right" field-height="32" add-icon="false" on-add="addNewSubObjective(name)">
+                        +
+                    </objective>
+                </child-objectives>
             </objective>
-        </child-objectives>
+        </main-objective>
     </objectives>
 </div>
