--- a/app/objectives/objectiveList.html
+++ b/app/objectives/objectiveList.html
@@ -7,9 +7,9 @@
             <objective mode="expanded" tasks="tasks" on-update="updateObjective()" on-delete="deleteObjective()" ng-model="objective">
                 <child-objectives>
                     <objective mode="mini" ng-repeat="objective in objective.subObjectives" ng-model="objective" ng-click="loadChildObjective($index)"></objective>
-                    <objective mode="mini" class="ghost" add-field="right" field-height="32" add-icon="false" on-add="addNewSubObjective(name)">
+                    <add-button class="ghost" add-field="right" on-add="addNewSubObjective(name)">
                         +
-                    </objective>
+                    </add-button>
                 </child-objectives>
             </objective>
         </main-objective>
