--- a/app/objectives/directives/objective/objective.html
+++ b/app/objectives/directives/objective/objective.html
@@ -5,14 +5,9 @@
             <name>
                 <span ng-model="objective.name" contenteditable="true" ng-blur="onUpdate()"></span>
             </name>
-            <toolbar>
-                <tool class="right" ng-click="onDelete()" tooltip="Delete Objective">
-                    <i class="fa fa-times-circle-o"></i>
-                </tool>
-                <tool class="right" ng-click="onComplete()" tooltip="Complete Objective">
-                    <i class="fa fa-check-circle-o"></i>
-                </tool>
-            </toolbar>
+            <tool-toggle>
+                <i class="fa fa-reorder"></i>
+            </tool-toggle>
         </header>
         <slide-panel>
             <add-button class="ghost" add-field="right" on-add="addTask(text)" tooltip="Add Task...">
@@ -26,10 +21,10 @@
             <task ng-repeat="task in tasks" on-completed-changed="toggleComplete(task)">{{task.name}}</task>
         </taskbar>
     </span>
-    <message ng-if="mode == 'expanded'" ng-show="!objective.subObjectives || objective.subObjectives.hasOwnProperty('$value')">
-        This goal has no sub-goals.  Add one by clicking below.
-    </message>
     <ng-transclude></ng-transclude>
+    <message ng-if="mode == 'expanded'" ng-show="!objective.subObjectives || objective.subObjectives.hasOwnProperty('$value')">
+        This goal has no sub-goals.  Add one by clicking above.
+    </message>
     <task-info-panel ng-show="taskIsSelected" ng-if="mode == 'expanded'"></task-info-panel>
     <progressbar progress="objective.progress"></progressbar>
 </span>
