slide out menu working per se (not dynamically sizing or positioning, so if the main objective size changes, it'll show)

--- a/app/objectives/directives/objective/objective.html
+++ b/app/objectives/directives/objective/objective.html
@@ -6,7 +6,7 @@
                 <span ng-model="objective.name" contenteditable="true" ng-blur="onUpdate()"></span>
             </name>
             <tool-toggle>
-                <i class="fa fa-reorder"></i>
+                <i class="fa fa-reorder" ng-click="tools.show = true"></i>
             </tool-toggle>
         </header>
         <slide-panel>
