collaborator list is kept in sync when tree walking

--- a/app/global/directives/messageOverlay/messageOverlay.html
+++ b/app/global/directives/messageOverlay/messageOverlay.html
@@ -1,4 +1,4 @@
 <div>
     <message>{{message}}</message>
-    <button ng-click="onOk()">Yes</button><button ng-click="onCancel()">No</button>
+    <button class="danger" ng-click="onOk()">Yes</button><button class="primary" ng-click="onCancel()">No</button>
 </div>
