--- a/app/global/directives/taskInfoPanel/taskInfoPanel.html
+++ b/app/global/directives/taskInfoPanel/taskInfoPanel.html
@@ -13,9 +13,9 @@
     <weight-picker ng-model="task.weight"></weight-picker>
     <toolbar>
         <tool>
-            <button ng-click="save()">save
-            </button><button ng-click="ngShow = false; deleteRequested = false">cancel
-            </button><button ng-click="deleteRequested = true">delete</button>
+            <button class="success" ng-click="save()">save
+            </button><button class="primary" ng-click="ngShow = false; deleteRequested = false">cancel
+            </button><button class="danger" ng-click="deleteRequested = true">delete</button>
         </tool>
     </toolbar>
 </div>
